# 3D-Renderer

./: CMakeLists.txt  README.md  run.sh
src/: geometry.h  main.cpp  model.h  renderer.cpp  renderer.h  window.cpp  window.h
